<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="skin_type">
        <item>모든 피부 타입</item>
        <item>건성</item>
        <item>지성</item>
        <item>민감성</item>
    </string-array>
</resources>